# phantom

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  windows-runtime.yml
crates/phantom-browser/: Cargo.toml
crates/phantom-browser/src/: actions.rs  cdp.rs  lib.rs  screenshot.rs
crates/phantom-browser/tests/: browser_e2e.rs
crates/phantom-cli/: Cargo.toml
crates/phantom-cli/src/: commands.rs  main.rs
crates/phantom-cli/src/tui/: app.rs  mod.rs
crates/phantom-cli/src/tui/views/: approval.rs  chat.rs  mod.rs  settings.rs  status.rs
crates/phantom-cli/src/tui/widgets/: input.rs  mod.rs  stream.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/examples/: headless_task.rs  swarm_task.rs
crates/phantom-core/src/: agent.rs  approval.rs  client.rs  config.rs  error.rs  lib.rs  orchestrator.rs  router.rs  security.rs  stream.rs  task.rs
crates/phantom-core/tests/: e2e_mock.rs
crates/phantom-daemon/: Cargo.toml
crates/phantom-daemon/src/: bus.rs  engine.rs  event.rs  main.rs  watcher.rs  webhook.rs
crates/phantom-desktop/: Cargo.toml
crates/phantom-desktop/examples/: desktop_smoke.rs  pool_smoke.rs
crates/phantom-desktop/src/: desktop.rs  input.rs  lib.rs  pool.rs  stub.rs
crates/phantom-fs/: Cargo.toml
crates/phantom-fs/src/: error.rs  lib.rs  operations.rs  powershell.rs  sandbox.rs
crates/phantom-proto/: Cargo.toml  build.rs
crates/phantom-proto/src/: lib.rs
proto/: phantom.proto
python/: generate_proto.py  pyproject.toml
python/phantom_llm/: __init__.py  prompts.py  schema.py  server.py  vision.py
python/phantom_llm/providers/: __init__.py  base.py  claude.py  gemini.py  mock.py  nvidia.py  ollama.py  openai.py
python/tests/: conftest.py  test_claude_e2e.py  test_nvidia_provider.py  test_providers.py  test_server_e2e.py
scripts/: chromium-snap-wrapper.sh
