[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Phantom"]
description = "Background-mode computer-use agent for Windows"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
ratatui = "0.29"
crossterm = "0.28"
futures = "0.3"
dirs = "5"
walkdir = "2"
chromiumoxide = "0.6"
grep = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
