[package]
name = "phantom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
phantom-core = { path = "../phantom-core" }
phantom-proto = { path = "../phantom-proto" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
