[package]
name = "phantom-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
phantom-proto = { path = "../phantom-proto" }
phantom-browser = { path = "../phantom-browser" }
phantom-fs = { path = "../phantom-fs" }
dirs.workspace = true
tracing.workspace = true
futures.workspace = true

# The hidden-desktop backend is Windows-only; on other platforms it compiles to
# a stub, but phantom-core only links it when building for Windows.
[target.'cfg(windows)'.dependencies]
phantom-desktop = { path = "../phantom-desktop" }

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "headless_task"
path = "examples/headless_task.rs"
