[package]
name = "phantom-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phantom-daemon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

phantom-core = { path = "../phantom-core" }
phantom-proto = { path = "../phantom-proto" }

# Phase A: daemon + proactive context engine.
axum = "0.7"
notify = "6"
clap = { version = "4", features = ["derive"] }
