[package]
name = "phantom-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true

# The hidden-desktop implementation is Windows-only. On other platforms this
# crate compiles to a stub (see src/stub.rs) so the workspace still type-checks.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Storage_Xps",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
] }
