[package]
name = "phantom-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
# Cross-platform system memory probing for the multi-desktop pool (Phase B).
sysinfo = "0.32"

[dev-dependencies]
# Only needed by examples/desktop_smoke.rs (the runtime harness).
tokio.workspace = true

# The invisible-desktop runtime smoke harness. Compiles on every platform
# (against the stub off-Windows) but only does real work when run on Windows.
[[example]]
name = "desktop_smoke"
path = "examples/desktop_smoke.rs"

# The multi-desktop pool runtime harness (Phase B). Same cross-platform rule:
# compiles everywhere, exercises real concurrent desktops only on Windows.
[[example]]
name = "pool_smoke"
path = "examples/pool_smoke.rs"

# The hidden-desktop implementation is Windows-only. On other platforms this
# crate compiles to a stub (see src/stub.rs) so the workspace still type-checks.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Storage_Xps",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
] }
